welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:34: error: not found: value c
        if (getCouleurSol()!=c){
                             ^